[gd_scene load_steps=11 format=3 uid="uid://do8ww1urgvtat"]

[ext_resource type="Texture2D" uid="uid://bwyh6tdfh4n35" path="res://Sprites/Furnace.png" id="1_61pyl"]
[ext_resource type="Script" path="res://Scenes/machines/furnace/furnace.gd" id="1_wqvqv"]
[ext_resource type="FontFile" uid="uid://b3tdwh3h4808i" path="res://Fonts/Platypi-VariableFont_wght.otf" id="3_rfhdb"]
[ext_resource type="AudioStream" uid="uid://bj75d51xy58m3" path="res://SFX/fireplace-with-crackling-sounds-2-min-rk-178392.mp3" id="3_w6vi5"]

[sub_resource type="AtlasTexture" id="AtlasTexture_7foo4"]
atlas = ExtResource("1_61pyl")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_inmfs"]
atlas = ExtResource("1_61pyl")
region = Rect2(0, 96, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_7kom4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7foo4")
}],
"loop": true,
"name": &"1-lit",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_inmfs")
}],
"loop": true,
"name": &"1-unlit",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nxuho"]
size = Vector2(32, 23)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_owajv"]
size = Vector2(32, 16)

[sub_resource type="CircleShape2D" id="CircleShape2D_27kj4"]
radius = 47.0106

[node name="Furnace" type="StaticBody2D"]
script = ExtResource("1_wqvqv")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, 0.5)
scale = Vector2(1, 0.96875)
sprite_frames = SubResource("SpriteFrames_7kom4")
animation = &"1-unlit"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -3.5)
shape = SubResource("RectangleShape2D_nxuho")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 16)
shape = SubResource("RectangleShape2D_owajv")

[node name="Cooking_SFX" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Cooking_SFX"]
shape = SubResource("CircleShape2D_27kj4")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="Cooking_SFX"]
stream = ExtResource("3_w6vi5")
volume_db = -7.0
bus = &"SFX"

[node name="Tooltip" type="Label" parent="."]
visible = false
offset_left = -3.0
offset_top = -28.0
offset_right = 121.0
offset_bottom = 251.0
scale = Vector2(0.05, 0.05)
theme_override_fonts/font = ExtResource("3_rfhdb")
theme_override_font_sizes/font_size = 200
text = "E"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="body_entered" from="Cooking_SFX" to="." method="_on_cooking_sfx_body_entered"]
[connection signal="body_exited" from="Cooking_SFX" to="." method="_on_cooking_sfx_body_exited"]
